fix: new Integer(int)改为Integer.valueOf()提升性能