@@ -86,7 +86,7 @@ public class RouteController extends ApiController {
             } else {
                 List<Route> result = new ArrayList<>();
                 result.add(route);
-                return PageResult.succeed(result, new Integer(1));
+                return PageResult.succeed(result, Integer.valueOf(1));
             }
         } catch (ApisixSDKException e) {
             logger.error(e.getMessage(), e);
